# Converge

./: .gitignore  README.md  consumers.py  models.py  package-lock.json  package.json  requirements.txt  serializers.py  views.py
.early.coverage/python/: coverage.json
Testing/UnitTesting/: backend
backend/: requirements.txt
backend/context_ai/: clear_and_reingest.py  debug_detailed.py  debug_retrieval.py  generate_report.py  generate_report_manual.py  pyproject.toml  requirements.txt
backend/context_ai/index/: id_map.json
backend/context_ai/index_test/: faiss.index
backend/context_ai/src/context_ai/: __init__.py  config.py  models.py
backend/context_ai/src/context_ai/agent/: orchestrator.py
backend/context_ai/src/context_ai/api/: main.py
backend/context_ai/src/context_ai/chunking/: code_parser.py  pdf_parser.py
backend/context_ai/src/context_ai/cli/: ingest.py  query.py
backend/context_ai/src/context_ai/embeddings/: encoder.py
backend/context_ai/src/context_ai/retrieval/: index_faiss.py  search.py
backend/context_ai/src/context_ai/storage/: mongo_store.py
backend/context_ai/src/context_ai/utils/: tokenization.py
backend/context_ai/src/index/: id_map.json
backend/remote-work/: .env  MONGODB_AUTH_README.md  manage.py
documentation/: IMPLEMENTATION_SUMMARY.md  github_import_feature.md  github_import_setup.md
documentation/elicitation techniques/: Questionnaires.md  interview.md  usecase_and_scenario.md
frontend/: TEST_SUMMARY.md  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/Discussion/: temp  (+2 more)
(+363 files in other folders)
